<resources>
    <string name="app_name">TwitterVideo</string>


    <string name="tweet_url">Tweet Url</string>
    <string name="download_video">Download Video/Gif</string>
    <string name="tap_like">Show us some likes by tapping the \'LIKE\' Button.</string>
    <string name="hope_like">Hope you like it.</string>
    <string name="thank_you">Thank you for using TwitterVideo</string>
    <string name="about_twittersave">About TwitterVideo</string>
    <string name="about">TwitterVideo helps you to download Videos and animated Gifs from Tweets to your device.</string>
    <string name="_1_copy_the_tweet_url_of_the_tweet_containing_the_video_or_animated_gif_then_paste_it_into_the_tweet_url_box_enter_the_name_you_want_it_stored_with_optional_then_tap_the_download_button_enjoy">Copy the tweet url of the tweet containing the video or animated gif. Then paste it into the tweet url box. Then tap the \'Download\' button. Enjoy!!!</string>
    <string name="select_share_tweet_via_option_from_the_specific_tweet_options_then_select_twittersave_app_from_the_list_of_apps_the_tweet_url_is_automatically_inserted_into_the_tweet_url_box_enter_the_name_you_want_it_stored_with_optional_then_tap_the_download_button_enjoy">Select \'Share Tweet via…\' option from the (specific) tweet options. Then select TwitterVideo app from the list of apps (The tweet url is automatically inserted into the tweet url box). Enter the name you want it stored with (optional). Then tap the \'Download\' button. Enjoy!!!</string>
    <string name="rachid_insa">Rachid Insa</string>
    <string name="enable_disable_autolisten">Enable/Disable AutoListen</string>
    <string name="enable_disable_night_mode">Enable/Disable NightMode</string>
    <string name="enable_autolisten_using_the_switch_below_the_download_button_from_the_twitter_app_simply_select_copy_link_to_tweet_option_from_the_tweet_containing_the_video_or_gif_twittasave_automatically_handles_the_download_of_the_video_or_animated_gif">Enable AutoListen using the Switch below the Download Button. From the Twitter app, simply select \'Copy link to tweet\' option from the tweet containing the video or gif. TwitterVideo automatically handles the download of the video or animated gif.</string>
    <string name="general_channel">General Channel</string>
    <string name="paste">Paste Link</string>
    <string name="toast_url">Enter correct URL</string>
</resources>
