<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:fillViewport="true"
    tools:context="com.shid.twittervideo.views.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:src="@mipmap/ic_launcher" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/colorPrimary">

            <EditText
                android:id="@+id/txt_tweet_url"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableRight="@drawable/ic_cancel_black_24dp"
                android:drawableEnd="@drawable/ic_cancel_black_24dp"
                android:drawableTint="?attr/tintColor"
                android:hint="@string/tweet_url"
                android:inputType="textUri"
                android:textColor="?attr/textColor"
                android:textColorHint="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:background="@drawable/btn_round2"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/download_video"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />


            <Button
                android:id="@+id/btn_paste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btn_download"
                android:layout_alignBottom="@+id/btn_download"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_round2"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/paste"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>


        <Switch
            android:id="@+id/swt_autolisten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/enable_disable_autolisten"
            android:textColor="?attr/textColor"

            />

        <Switch
            android:id="@+id/swt_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/enable_disable_night_mode"
            android:textColor="?attr/textColor"/>


    </LinearLayout>


</ScrollView>
